# swarma

./: .env.template  .gitignore  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  README.zh.md  README_CN.md  README_JA.md  SKILL.md  pyproject.toml  test_loop.py
docs/: api.md  hermes.md  quickstart.md  squads.md
examples/activation-flow/: program.md  team.yaml
examples/ad-creative-lab/: program.md  team.yaml
examples/agentic-storefront/: program.md
examples/cold-outbound/: program.md  team.yaml
examples/community-engine/: program.md  team.yaml
examples/competitive-intel/: team.yaml
examples/content-ops/: program.md  team.yaml
examples/cost-optimizer/: program.md  team.yaml
examples/crypto-research/: program.md  team.yaml
examples/dev-rel/: program.md  team.yaml
examples/email-ops/: program.md  team.yaml
examples/faceless-factory/: team.yaml
examples/hook-lab/: team.yaml
examples/landing-copy/: program.md  team.yaml
examples/landing-lab/: team.yaml
examples/market-intel/: program.md  team.yaml
examples/model-lab/: program.md  team.yaml
examples/newsletter-engine/: program.md
examples/product-growth/: program.md  team.yaml
examples/programmatic-seo/: program.md  team.yaml
examples/quality-lab/: program.md  team.yaml
examples/referral-engine/: program.md
examples/retention-squad/: team.yaml
examples/seo-engine/: team.yaml
examples/seo-lab/: program.md  team.yaml
examples/social-growth/: program.md  team.yaml
examples/thought-leadership/: program.md  team.yaml
examples/trend-scout/: program.md  team.yaml
examples/ugc-factory/: program.md  team.yaml
research/: growth-ops-landscape-2026.md
swarma/: __init__.py
swarma/adapters/: __init__.py  base.py  hermes.py  http.py  llm.py  process.py  registry.py
swarma/cli/: cycle.py  expert.py  helpers.py  init.py  main.py  metric.py  run.py  serve.py  status.py  team.py  tool.py
swarma/core/: __init__.py  agent.py  config.py  cycle.py  experiment.py  generator.py  heartbeat.py  knowledge.py  router.py  state.py
swarma/dashboard/: __init__.py
swarma/examples/: __init__.py
swarma/experts/: __init__.py  catalog.py  composer.py
swarma/flow/: __init__.py  executor.py  parser.py
swarma/server/: __init__.py  app.py  mcp.py
swarma/templates/: __init__.py  content.yaml  defi.yaml  minimal.yaml  (+1 more)
(+154 files in other folders)
